--- a/src/component/Home/Home.styles.scss
+++ b/src/component/Home/Home.styles.scss
@@ -1,3 +1,7 @@
+body {
+  background: url(https://www.jotform.com/uploads/guest_420ef68d62580842/form_files/pfc_clone_64c8bdb36b067.jpg?nc=1) center center / cover no-repeat;
+}
+
 .home {
   display: flex;
   flex-direction: column;
@@ -7,12 +11,13 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background: url(https://www.jotform.com/uploads/guest_420ef68d62580842/form_files/pfc_clone_64c8bdb36b067.jpg?nc=1) center center / cover no-repeat;
 }
 
 .content {
   max-width: 800px;
   padding: 2rem;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: #D68910(255, 255, 255, 0.8);
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   text-align: center;
@@ -44,7 +49,7 @@
 }
 
 .btn-1 {
-  background-color: #007bff; /* Replace with your desired color */
+  background-color:#D68910; 
 }
 
-/* Add more button styles as needed */
+
