--- a/src/homepage.styles.scss
+++ b/src/homepage.styles.scss
@@ -20,7 +20,7 @@
       cursor: pointer;
   
       & .background-image {
-        background-image: url('eventproplaner/src/img/backgrndimg.png'); 
+        //background-image: url('eventproplaner/src/img/backgrndimg.png'); 
         transform: scale(1.1);
         transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
       }
