--- a/src/component/Home/Home.styles.scss
+++ b/src/component/Home/Home.styles.scss
@@ -1,5 +1,5 @@
 body {
-  background: url(https://www.jotform.com/uploads/guest_420ef68d62580842/form_files/pfc_clone_64c8bdb36b067.jpg?nc=1) center center / cover no-repeat;
+  //background: url(https://www.jotform.com/uploads/guest_420ef68d62580842/form_files/pfc_clone_64c8bdb36b067.jpg?nc=1) center center / cover no-repeat;
 }
 
 .home {
@@ -11,7 +11,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background: url(https://www.jotform.com/uploads/guest_420ef68d62580842/form_files/pfc_clone_64c8bdb36b067.jpg?nc=1) center center / cover no-repeat;
+  //background: url(https://www.jotform.com/uploads/guest_420ef68d62580842/form_files/pfc_clone_64c8bdb36b067.jpg?nc=1) center center / cover no-repeat;
 }
 
 .content {
