--- a/src/component/EventCreation/EventCreation.styles.scss
+++ b/src/component/EventCreation/EventCreation.styles.scss
@@ -1,39 +1,46 @@
+/* EventCreation.styles.scss */
+
 .event-creation {
-    padding: 20px;
-  
-    h2 {
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
-  
-    form {
-      label {
-        display: block;
-        margin-bottom: 10px;
-      }
-  
-      input,
-      textarea {
-        width: 100%;
-        padding: 10px;
-        margin-bottom: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-      }
-  
-      button {
-        padding: 10px 20px;
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.2s ease;
-  
-        &:hover {
-          background-color: #0056b3;
-        }
-      }
-    }
-  }
-  
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.event-creation h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.event-creation form {
+  display: flex;
+  flex-direction: column;
+}
+
+.event-creation label {
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+.event-creation input,
+.event-creation textarea {
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.event-creation button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.event-creation button:hover {
+  background-color: #0056b3;
+}
