--- a/src/component/EventEditing/EventEditing.styles.scss
+++ b/src/component/EventEditing/EventEditing.styles.scss
@@ -1,4 +1,9 @@
+// EventEditing.styles.scss
+
 .event-edit {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 20px;
   
     h1 {
@@ -6,30 +11,30 @@
     }
   
     .edit-form {
-      display: flex;
-      flex-direction: column;
+      display: grid;
+      gap: 10px;
+      width: 400px;
   
       label {
-        margin-bottom: 5px;
+        font-weight: bold;
       }
   
       input,
       textarea {
-        margin-bottom: 15px;
-        padding: 8px;
+        width: 100%;
+        padding: 10px;
         border: 1px solid #ccc;
         border-radius: 4px;
-        font-size: 16px;
       }
   
       button {
-        padding: 10px 20px;
         background-color: #007bff;
         color: white;
         border: none;
+        padding: 10px 20px;
         border-radius: 4px;
         cursor: pointer;
-        font-size: 16px;
+        transition: background-color 0.3s ease;
   
         &:hover {
           background-color: #0056b3;
