--- a/src/component/EventListing/EventListing.styles.scss
+++ b/src/component/EventListing/EventListing.styles.scss
@@ -1,52 +1,70 @@
 .event-listing {
+  max-width: 800px;
+  margin: 0 auto;
   padding: 20px;
 
   .home-link {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    text-decoration: none;
-    color: #000000;
-    font-weight: bold;
+    display: block;
+    text-align: right;
+    margin-bottom: 20px;
   }
 
   h1 {
-    font-size: 36px;
-    color: #333;
-    margin-bottom: 30px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+
+  select,
+  input[type="text"] {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
   }
 
   ul {
     list-style: none;
     padding: 0;
+    margin: 0;
 
     .event-card {
-      background-color: #fff;
-      border-radius: 10px;
-      padding: 20px;
-      margin-bottom: 30px;
-      box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
-      display: flex;
-      align-items: center;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      border: 1px solid #ccc;
+      padding: 10px;
+      margin-bottom: 10px;
+      background-color: #f9f9f9;
+      transition: background-color 0.2s ease-in-out;
 
       &:hover {
-        transform: translateY(-5px);
-        box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2);
+        background-color: #e0e0e0;
       }
 
       .event-card-link {
         text-decoration: none;
         color: #333;
-        font-weight: bold;
-        font-size: 20px;
-        margin-right: 20px;
-        transition: color 0.3s ease;
 
         &:hover {
-          color: #ff6b6b;
+          text-decoration: underline;
         }
+      }
+    }
+  }
+
+  .pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+
+    span {
+      padding: 5px 10px;
+      margin: 0 5px;
+      cursor: pointer;
+      background-color: #f9f9f9;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+
+      &:hover {
+        background-color: #e0e0e0;
       }
     }
   }
